src/test/deca/codegen/valid/selection.deca
// Description:
//    Test une double selection.
//
// Resultats:
//    3
//
// Historique:
//    cree le 25/01/2023

class A {
    int x = 0;
}

class B {
    A a = new A();
}

{
    B b = new B();
    b.a.x = 3;
    println(b.a.x);
}